dev/deploy-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-deploy
  namespace: dev
  labels:
    env: dev
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      env: dev
      app: hello
  
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        env: dev
        app: hello
    spec:
      serviceAccountName: dev-sa

      containers:
      - name: hello
        image: dockergahana1/hello-world
        ports:
        - containerPort: 8080


        resources:
          requests:
            cpu: "250m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
