dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-deploy
  labels:
    env: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      env: dev
  template:
    metadata:
      labels:
        env: dev
    spec:
      containers:
      - name: deploy1
        image: dockerghana1/emp
        ports:
        - containerPort: 80
