dev/dev.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dev-pod
  labels:
    env: dev
spec:
  containers:
  - name: dev-1
    image: dockerghana1/emp
    ports:
    - containerPort: 80
