dev/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: hello
    env: dev
  ports:
    - port: 8080
      targetPort: 8080
