dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-1-service
  namespace: dev
spec:
  type: NodePort
  selector:
    env: dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080
