dev/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-deny-cross-env
  namespace: dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
       - namespaceSelector:
           matchLabels:
             kubernetes.io/metadata.name: dev

  egress:
    - to:
       - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: dev
